--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -3,11 +3,11 @@
 <h1>Profile</h1>
 
 <div>
-    <p><%= use.name %></p>
-    <p><%= use.username %></p>
-    <p><%= use.phone %></p>
-    <p><%= use.email %></p>
-    <p><%= use.address %></p>
+    <p><%= user.name %></p>
+    <p><%= user.username %></p>
+    <p><%= user.phone %></p>
+    <p><%= user.email %></p>
+    <p><%= user.address %></p>
 </div>
 
 <br><a href="/">Back to Account Summary</a>
